--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
 	<title>Matx-A</title>
 	<table width="1500" border="1" cellpadding="3">
 	<tr>
-	<td bgcolor="white">
-	<h1>Matx-A</h1>
+	<td bgcolor="blue">
+	<h1>New Hites Technology</h1>
 	</td>
 	</tr>
 	</table>
+	<table width="1500" border="1" cellpadding="3">
+	<tr>
+	<td bgcolor="blue"
 	<p>
 	</p>
-	<a href="calculator.php">Continue!</a>
+	<a href="aboutus.html">About Us</a>
+	<a href="news.html">News</a>
+	<a href="downloadappps.html">Download Our Apps</a>
+	<a href="contactus.html">Contact Us</a>
+	</td>
+	</tr>
+	</table>
+	<script type="text/css">
+		
+	h1{
+		font-size: 30pt;
+		font-family: arial, black;
+		color: white;
+	}	
+		
+	</script>
 	</head>
 	</body>
 	</html>
