--- a/index.html
+++ b/index.html
@@ -12,25 +12,31 @@
 	</table>
 	<table width="1500" border="1" cellpadding="3">
 	<tr>
-	<td bgcolor="blue"
+	<td bgcolor="white"
 	<p>
 	</p>
-	<a href="aboutus.html">About Us</a>
-	<a href="news.html">News</a>
-	<a href="downloadappps.html">Download Our Apps</a>
-	<a href="contactus.html">Contact Us</a>
+	<a href="aboutus.html" "text-decoration:none" >About Us</a>
+	<a href="news.html" "text-decoration:none">News</a>
+	<a href="downloadappps.html" "text-decoration:none">Download Our Apps</a>
+	<a href="contactus.html" "text-decoration:none">Contact Us</a>
 	</td>
 	</tr>
 	</table>
-	<script type="text/css">
+	<style type="text/css">
 		
 	h1{
-		font-size: 30pt;
+		font-size: 40pt;
 		font-family: arial, black;
 		color: white;
-	}	
+	}
+	
+	a{
+		font-size: 25pt;
+		font-family: arial, black;
+		color: blue;
+	}
 		
-	</script>
+	</style>
 	</head>
 	</body>
 	</html>
