--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<td bgcolor="white"
 	<p>
 	</p>
-	<a href="aboutus.html" "text-decoration:none" >About Us</a>
-	<a href="news.html" "text-decoration:none">News</a>
-	<a href="downloadappps.html" "text-decoration:none">Download Our Apps</a>
-	<a href="contactus.html" "text-decoration:none">Contact Us</a>
+	<a href="aboutus.html">About Us</a>
+	<a href="news.html">News</a>
+	<a href="downloadappps.html">Download Our Apps</a>
+	<a href="contactus.html">Contact Us</a>
 	</td>
 	</tr>
 	</table>
@@ -34,6 +34,7 @@
 		font-size: 25pt;
 		font-family: arial, black;
 		color: blue;
+		decoration: none;
 	}
 		
 	</style>
