--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		font-size: 25pt;
 		font-family: arial, black;
 		color: blue;
-		decoration: none;
+		text-decoration: none;
 	}
 		
 	</style>
