--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		
 	h1{
 		font-size: 40pt;
-		font-family: arial, black;
+		font-family: hp, simplified;
 		color: white;
 	}
 	
 	a{
 		font-size: 25pt;
-		font-family: arial, black;
+		font-family: hp simplified;
 		color: blue;
 		text-decoration: none;
 	}
