--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<table width="1500" border="1" cellpadding="3">
 	<tr>
 	<td bgcolor="blue">
-	<h1>New Hites Technology</h1>
+	<h1>new hites technology</h1>
 	</td>
 	</tr>
 	</table>
