--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 		
 	h1{
 		font-size: 40pt;
-		font-family: hp, simplified;
+		font-family: hp simplified;
 		color: white;
+		text-decoration: underline;
 	}
 	
 	a{
