--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <body>
-	<title>Matx-A</title>
+	<title>New Hites Technology</title>
 	<table width="1500" border="1" cellpadding="3">
 	<tr>
 	<td bgcolor="blue">
