--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</table>
 	<table width="1500" border="1" cellpadding="3">
 	<tr>
-	<td bgcolor="white"
+	<td bgcolor="white">
 	<p>
 	</p>
 	<a href="aboutus.html">About Us</a>
@@ -25,6 +25,12 @@
 	</td>
 	</tr>
 	</table>
+	<p></p>
+	<h2>Want to receive news and stay updated? Sign up for our newsletter. </h2>
+	<table width="20" border="0" cellpadding="3">
+	<tr>
+	<td bgcolor="white">
+	<a href="newsletter.html">Sign Up</a>
 	<style type="text/css">
 		
 	h1{
@@ -32,6 +38,13 @@
 		font-family: hp simplified;
 		color: white;
 		text-decoration: underline;
+	}
+	
+	h2{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
 	}
 	
 	a{
