--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<h2>Want to receive news and stay updated? Sign up for our newsletter. </h2>
 	<table width="20" border="0" cellpadding="3">
 	<tr>
-	<td bgcolor="white">
-	<a href="newsletter.html">Sign Up</a>
+	<td bgcolor="blue">
+	<p href="newsletter.html">Sign Up</p>
 	<style type="text/css">
 		
 	h1{
@@ -41,7 +41,7 @@
 	}
 	
 	h2{
-		font-size: 35pt;
+		font-size: 30pt;
 		font-family: hp simplified;
 		color: blue;
 		text-decoration: none;
@@ -51,6 +51,13 @@
 		font-size: 25pt;
 		font-family: hp simplified;
 		color: blue;
+		text-decoration: none;
+	}
+	
+	a{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: white;
 		text-decoration: none;
 	}
 		
