--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	</table>
 	<p></p>
 	<h2>Want to receive news and stay updated? Sign up for our newsletter. </h2>
-	<table width="20" border="0" cellpadding="3">
+	<table width="40" border="0" cellpadding="3">
 	<tr>
-	<td bgcolor="blue">
-	<p href="newsletter.html">Sign Up</p>
+	<td bgcolor="gray">
+	<a href="newsletter.html">Sign Up</a>
 	<style type="text/css">
 		
 	h1{
@@ -54,12 +54,6 @@
 		text-decoration: none;
 	}
 	
-	a{
-		font-size: 25pt;
-		font-family: hp simplified;
-		color: white;
-		text-decoration: none;
-	}
 		
 	</style>
 	</head>
