--- a/downloadapps.html
+++ b/downloadapps.html
@@ -22,3 +22,37 @@
 	</td>
 	</tr>
 	</table>
+		<style type="text/css">
+		
+	h1{
+		font-size: 40pt;
+		font-family: hp simplified;
+		color: white;
+		text-decoration: underline;
+	}
+	
+	h2{
+		font-size: 30pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: underline;
+	}
+	
+	h3{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	a{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+
+	
+		
+	</style>
