--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<p></p>
 	<a href="news.html">News</a>
 	<p></p>
-	<a href="downloadappps.html">Download Our Apps</a>
+	<a href="downloadapps.html">Download Our Apps</a>
 	<p></p>
 	<a href="contactus.html">Contact Us</a>
 	</td>
