--- a/downloadapps.html
+++ b/downloadapps.html
@@ -46,7 +46,14 @@
 	}
 	
 	a{
-		font-size: 25pt;
+		font-size: 15pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	p{
+		font-size: 20pt;
 		font-family: hp simplified;
 		color: blue;
 		text-decoration: none;
