--- a/downloadapps.html
+++ b/downloadapps.html
@@ -15,7 +15,7 @@
 	<p></p>
 	<h3>Matx-A</h3>
 	<p>A calculator that gives you the sum, difference, product and quotient from two chosen numbers all at once</p>
-	<table width="115" border="0" cellpadding="3">
+	<table width="100" border="0" cellpadding="3">
 	<tr>
 	<td bgcolor="gray">
 	<a href="matx-a.php">Download</a>
@@ -55,7 +55,7 @@
 	p{
 		font-size: 20pt;
 		font-family: hp simplified;
-		color: blue;
+		color: black;
 		text-decoration: none;
 	}
 	
