--- a/downloadapps.html
+++ b/downloadapps.html
@@ -14,7 +14,7 @@
 	<p></p>
 	<p></p>
 	<h3>Matx-A</h3>
-	<p>A calculator that gives you the sum, difference, product and quotient from two chosen numbers all at once</p>
+	<p>A calculator that gives you the sum, difference, product and quotient from two chosen numbers all at once.</p>
 	<table width="90" border="0" cellpadding="3">
 	<tr>
 	<td bgcolor="gray">
