--- a/downloadapps.html
+++ b/downloadapps.html
@@ -10,7 +10,7 @@
 	</td>
 	</tr>
 	</table>
-	<h2>Our apps</h2>
+	<h2>Our apps:</h2>
 	<p></p>
 	<p></p>
 	<h3>Matx-A</h3>
@@ -22,6 +22,15 @@
 	</td>
 	</tr>
 	</table>
+	<p></p>
+	<p></p>
+	<h2>Coming soon:</h2>
+	<p></p>
+	<p></p>
+	<h3>Matx-B</h3>
+	<p></p>
+	<p></p>
+	<h3>Matx-C</h3>
 		<style type="text/css">
 		
 	h1{
