--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</tr>
 	</table>
 	<p></p>
-	<h2>Want to receive news and stay updated? Sign up for our newsletter. </h2>
+	<h2>Want to receive news and stay updated? Sign up for our weekly newsletter. </h2>
 	<table width="110" border="0" cellpadding="3">
 	<tr>
 	<td bgcolor="gray">
