--- a/aboutus.html
+++ b/aboutus.html
@@ -19,3 +19,44 @@
 <p></p>
 <h3>The Future</h3>
 <p>We plan to continue to develope apps as we do right now, with education as our basis. But we also have projects that will approach certain audiences and a project called "Essentials", both of which you'll se more of later in 2016..
+		<style type="text/css">
+		
+	h1{
+		font-size: 40pt;
+		font-family: hp simplified;
+		color: white;
+		text-decoration: underline;
+	}
+	
+	h2{
+		font-size: 30pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: underline;
+	}
+	
+	h3{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	a{
+		font-size: 15pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	p{
+		font-size: 20pt;
+		font-family: hp simplified;
+		color: black;
+		text-decoration: none;
+	}
+	
+
+	
+		
+	</style>
