--- a/aboutus.html
+++ b/aboutus.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html> 
-2 <html> 
-3 <head> 
-4 <body> 
-5 	<title>New Hites Technology</title> 
-6 	<table width="1500" border="1" cellpadding="3"> 
-7 	<tr> 
-8 	<td bgcolor="blue"> 
-9 	<h1>new hites technology</h1> 
-10 	</td> 
-11 	</tr> 
-12 	</table> 
+ <html> 
+<head> 
+ <body> 
+ 	<title>New Hites Technology</title> 
+	<table width="1500" border="1" cellpadding="3"> 
+	<tr> 
+	<td bgcolor="blue"> 
+	<h1>new hites technology</h1> 
+	</td> 
+	</tr> 
+  </table> 
 <h2>About New Hites Technology</h2>
 <h3>Our Brief History</h3>
 <p>New Hites Technology was founded in June of 2016 as project on the side by Adrian K Companies. The ideas was to keep a non-profit software developer, but that plan changed. Our current CEO, Adrian, decided to leave Adrian K Companies, the investment concern he had founded to become a tech executive. Plans changed and New Hites was now a regular company. 
