--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
 <p>We simply focus on developing smart and efficient educational apps and programs with knowledge and learning as the base of our development. We are currently most active in the field of mathematics, with calculators as primary objects.</p>
 <p></p>
 <h3>The Future</h3>
-<p>We plan to continue to develope apps as we do right now, with education as our basis. But we also have projects that will approach certain audiences and a project called "Essentials", both of which you'll se more of later in 2016..
+<p>We plan to continue to develope apps as we do right now, with education as our basis. But we also have projects that will approach certain audiences and a project called "Essentials", both of which you'll se more of later in 2016.</p>
 		<style type="text/css">
 		
 	h1{
