--- a/contactus.html
+++ b/contactus.html
@@ -45,3 +45,44 @@
  	</tr>
  	</table>
  	<p>(emelie.newhites@yahoo.com)</p>
+ 			<style type="text/css">
+		
+	h1{
+		font-size: 40pt;
+		font-family: hp simplified;
+		color: white;
+		text-decoration: underline;
+	}
+	
+	h2{
+		font-size: 30pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: underline;
+	}
+	
+	h3{
+		font-size: 25pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	a{
+		font-size: 15pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
+	p{
+		font-size: 20pt;
+		font-family: hp simplified;
+		color: black;
+		text-decoration: none;
+	}
+	
+
+	
+		
+	</style>
