--- a/newsletter.html
+++ b/newsletter.html
@@ -15,6 +15,9 @@
  	<tr>  
  	<td bgcolor="gray">
  	<a href="@mailto:newhitesletter@yahoo.com">Mail Here</a>
+ 	</td>
+ 	</tr>
+ 	</table>
  	<p>(newhitesletter@yahoo.com)</p>
  				<style type="text/css">
 		
