--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 	</tr>
 	</table>
 	<p></p>
+	<script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"newhitestechnology","width":550,"height":250,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
 	<h2>Want to receive news and stay updated? Sign up for our weekly newsletter. </h2>
 	<table width="115" border="0" cellpadding="3">
 	<tr>
