--- a/downloadapps.html
+++ b/downloadapps.html
@@ -19,15 +19,23 @@
 	<tr>
 	<td bgcolor="gray">
 	<a href="matx-a.php">Download</a>
+		</td>
+	</tr>
+	</table>
+	<p></p>
+	<p></p>
+	<h3>Matx-B</h3>
+	<p>When you know the sum, differenc, product and quota of two unknown numbers, use Matx-B to quickly figure out which these numbers are.</p>
+	<table width="90" border="0" cellpadding="3">
+	<tr>
+	<td bgcolor="gray">
+	<a href="matx-a.php">Download</a>
 	</td>
 	</tr>
 	</table>
 	<p></p>
 	<p></p>
 	<h2>Coming soon:</h2>
-	<p></p>
-	<p></p>
-	<h3>Matx-B</h3>
 	<p></p>
 	<p></p>
 	<h3>Matx-C</h3>
