--- a/downloadapps.html
+++ b/downloadapps.html
@@ -10,6 +10,11 @@
 	</td>
 	</tr>
 	</table>
+	<h2>How To Download Our Apps:</h2>
+	<p>Step 1: Click "Download" on the app that you want.</p>
+	<p>Step 2: If you have a PHP webserver installed on your device then you can simply save the file and run it on your localhost. If not though then open the file in notepad or a similiar device. </p>
+	<p>Step 3: Copy the code from the software used and go to phpfiddle.org where you'll have to create an account. Paste the code and save the file with the same as the one you downloaded</p>
+	<p>Step 4: Enjoy!</p>
 	<h2>Our apps:</h2>
 	<p></p>
 	<p></p>
@@ -29,10 +34,12 @@
 	<table width="90" border="0" cellpadding="3">
 	<tr>
 	<td bgcolor="gray">
-	<a href="matx-a.php">Download</a>
+	<a href="matx-b.php">Download</a>
 	</td>
 	</tr>
 	</table>
+	<h3>Binary Numbers</h3>
+	<p>Go to binarynumbers.github.io/download to download this app.</p>
 	<p></p>
 	<p></p>
 	<h2>Coming soon:</h2>
