--- a/downloadapps.html
+++ b/downloadapps.html
@@ -30,7 +30,7 @@
 	<p></p>
 	<p></p>
 	<h3>Matx-B</h3>
-	<p>When you know the sum, differenc, product and quota of two unknown numbers, use Matx-B to quickly figure out which these numbers are.</p>
+	<p>When you know the sum, difference, product and quota of two unknown numbers, use Matx-B to quickly figure out which these numbers are.</p>
 	<table width="90" border="0" cellpadding="3">
 	<tr>
 	<td bgcolor="gray">
