--- a/downloadapps.html
+++ b/downloadapps.html
@@ -15,6 +15,8 @@
 	<p>Step 2: If you have a PHP webserver installed on your device then you can simply save the file and run it on your localhost. If not though then open the file in notepad or a similiar device. </p>
 	<p>Step 3: Copy the code from the software used and go to phpfiddle.org where you'll have to create an account. Paste the code and save the file with the same as the one you downloaded</p>
 	<p>Step 4: Enjoy!</p>
+	<p>If you wish to dwonload any of our apps to your phone then go to our mobile website at:
+	newhitestechnology.github.io/mobile</p>
 	<h2>Our apps:</h2>
 	<p></p>
 	<p></p>
