--- a/downloadapps.html
+++ b/downloadapps.html
@@ -40,6 +40,19 @@
 	</td>
 	</tr>
 	</table>
+	<p></p>
+	<p></p>
+	<h3>Matx-C</h3>
+	<p>With Matx-C you can do an addition, subtraction, multiplication, and division, all with different numbers at the same time. </p>
+	<table width="90" border="0" cellpadding="3">
+	<tr>
+	<td bgcolor="gray">
+	<a href="matx-c.php">Download</a>
+	</td>
+	</tr>
+	</table>
+	<p></p>
+	<p></p>
 	<h3>Binary Numbers</h3>
 	<p>Go to binarynumbers.github.io/download to download this app.</p>
 	<p></p>
@@ -47,7 +60,7 @@
 	<h2>Coming soon:</h2>
 	<p></p>
 	<p></p>
-	<h3>Matx-C</h3>
+	<h3>Matx-Complex</h3>
 		<style type="text/css">
 		
 	h1{
