--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,19 @@
 	</td> 
 	</tr> 
   </table> 
+  <h2>About Us</h2>
+  <p></p>
+  <h3>Brief story</h3>
+  <p>We started out as a secondary project by an investment company, but in June of 2016 New Hites was created into a separate business. We are now one of the fastest growing tech startups in our region. We are also available for consulting, which you can contact us about </p>
+  <a href="contactus.html">here.</a>
+  <p></p>
+  <h3>What we do</h3>
+  <p></p>
+  <p>We develop apps and other technical tools, primarily within the field of education. Some of our most successfull products are the Matx-Collection and Binary Numbers.</p>
+  <p></p>
+  <h3>The future</h3>
+  <p></p>
+  <p>We plan to continue to run our business the same way as we do with the same priorities and focus as before. But we also have alot of diverse and exciting projects that will be revealed under the course of 2016, for example in the field of social media. </p>
 
 		<style type="text/css">
 		
@@ -35,10 +48,10 @@
 	}
 	
 	a{
-		font-size: 15pt;
+		font-size: 20pt;
 		font-family: hp simplified;
 		color: blue;
-		text-decoration: none;
+	
 	}
 	
 	p{
