--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
   <p></p>
   <h3>What we do</h3>
   <p></p>
-  <p>We develop apps and other technical tools, primarily within the field of education. Some of our most successfull products are the Matx-Collection and Binary Numbers.</p>
+  <p>We develop apps and other technical tools, primarily within the field of education. Some of our most successfull products include the Matx-Collection and Binary Numbers.</p>
   <p></p>
   <h3>The future</h3>
   <p></p>
