--- a/contactus.html
+++ b/contactus.html
@@ -11,6 +11,21 @@
  	</tr>  
    </table>
    <h2>Contact us</h2>
+   <p></p>
+   <h3>Reach out to us</h3>
+   <p></p>
+   <p>Whether it is about reporting technical issues, give us feedback, or ask any other question the by far best way to contact us is via Twitter</p>
+   <p></p>
+   <p>Company twitter account:</p>
+   <h4>@newhitestech</h4>
+   <p></p>
+   <p>CEO twitter account:</p>
+   <h4>@NewHitesCEO</h4>
+   <p></p>
+   <p>You can contact us via mail aswell.</p>
+   <p></p>
+   <p>CEO mail:</p>
+   <h4>adrian.newhites@yahoo.com</h4>
 
  			<style type="text/css">
 		
@@ -48,6 +63,13 @@
 		color: black;
 		text-decoration: none;
 	}
+		h4{
+		font-size: 20pt;
+		font-family: hp simplified;
+		color: blue;
+		text-decoration: none;
+	}
+	
 	
 
 	
