--- a/contactus.html
+++ b/contactus.html
@@ -10,7 +10,7 @@
  	</td>  
  	</tr>  
    </table>
-   <h2>Contact us</h2>
+   <h2>Contact Us</h2>
    <p></p>
    <h3>Reach out to us</h3>
    <p></p>
