--- a/newsletter.html
+++ b/newsletter.html
@@ -10,15 +10,12 @@
  	</td>  
  	</tr>  
    </table>
-   <h2>Sign Up By Sending Us A Mail:</h2>
-   <table width="90" border="0" cellpadding="3">  
- 	<tr>  
- 	<td bgcolor="gray">
- 	<a href="@mailto:newhitesletter@yahoo.com">Mail Here</a>
- 	</td>
- 	</tr>
- 	</table>
- 	<p>(newhitesletter@yahoo.com)</p>
+   <h2>Newsletter</h2>
+   <p></p>
+   <h3>Sign Up</h3>
+   <p></p>
+   <p>Send us an e-mail to sign up:</p>
+   <h4>newhitesletter@yahoo.com</h4>
  				<style type="text/css">
 		
 	h1{
@@ -53,6 +50,12 @@
 		font-size: 20pt;
 		font-family: hp simplified;
 		color: black;
+		text-decoration: none;
+	}
+		h4{
+		font-size: 20pt;
+		font-family: hp simplified;
+		color: blue;
 		text-decoration: none;
 	}
 	
