--- a/news.html
+++ b/news.html
@@ -10,7 +10,13 @@
  	</td>  
  	</tr>  
    </table>
-   <h2>News:</h2>
+   <h2>News</h2>
+   <p></p>
+   <h3>Social network is under development</h3>
+   <p></p>
+   <h4>2016-08-06</h4>
+   <p></p>
+   <p>New Hites are currently developing a social network, with the goal of this being published within the following weeks. More info about this application will be released in the beginning of next week.</p>
    			<style type="text/css">
 		
 	h1{
@@ -45,6 +51,12 @@
 		font-size: 20pt;
 		font-family: hp simplified;
 		color: black;
+		text-decoration: none;
+	}
+		h4{
+		font-size: 20pt;
+		font-family: hp simplified;
+		color: blue;
 		text-decoration: none;
 	}
 	
