--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
    <p></p>
    <h4>2016-08-06</h4>
    <p></p>
-   <p>New Hites are currently developing a social network, with the goal of this being published within the following weeks. More info about this application will be released in the beginning of next week.</p>
+   <p>New Hites is currently developing a social network, with the goal of this being published within the following weeks. More info about this application will be released in the beginning of next week.</p>
    			<style type="text/css">
 		
 	h1{
